fix(plus/search-filter): avoid wrap

--- a/client/src/plus/search-filter/index.scss
+++ b/client/src/plus/search-filter/index.scss
@@ -28,6 +28,10 @@
     width: 100%;
   }
 
+  .button-wrap {
+    white-space: nowrap;
+  }
+
   .action {
     > span:before {
       content: "✓";
